plugins/ncnn_yolox/lib/ncnn_yolox_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/ncnn_yolox.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class NcnnYoloxBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NcnnYoloxBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NcnnYoloxBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(
    int a,
    int b,
  ) {
    return _sum(
      a,
      b,
    );
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.IntPtr, ffi.IntPtr)>>(
          'sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(
    int a,
    int b,
  ) {
    return _sum_long_running(
      a,
      b,
    );
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.IntPtr, ffi.IntPtr)>>(
          'sum_long_running');
  late final _sum_long_running =
      _sum_long_runningPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<YoloX> yoloxCreate() {
    return _yoloxCreate();
  }

  late final _yoloxCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<YoloX> Function()>>('yoloxCreate');
  late final _yoloxCreate =
      _yoloxCreatePtr.asFunction<ffi.Pointer<YoloX> Function()>();

  void yoloxDestroy(
    ffi.Pointer<YoloX> yolox,
  ) {
    return _yoloxDestroy(
      yolox,
    );
  }

  late final _yoloxDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YoloX>)>>(
          'yoloxDestroy');
  late final _yoloxDestroy =
      _yoloxDestroyPtr.asFunction<void Function(ffi.Pointer<YoloX>)>();

  ffi.Pointer<DetectResult> detectResultCreate() {
    return _detectResultCreate();
  }

  late final _detectResultCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<DetectResult> Function()>>(
          'detectResultCreate');
  late final _detectResultCreate =
      _detectResultCreatePtr.asFunction<ffi.Pointer<DetectResult> Function()>();

  void detectResultDestroy(
    ffi.Pointer<DetectResult> result,
  ) {
    return _detectResultDestroy(
      result,
    );
  }

  late final _detectResultDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DetectResult>)>>(
          'detectResultDestroy');
  late final _detectResultDestroy = _detectResultDestroyPtr
      .asFunction<void Function(ffi.Pointer<DetectResult>)>();

  int detectWithImagePath(
    ffi.Pointer<YoloX> yolox,
    ffi.Pointer<ffi.Char> image_path,
    ffi.Pointer<DetectResult> result,
  ) {
    return _detectWithImagePath(
      yolox,
      image_path,
      result,
    );
  }

  late final _detectWithImagePathPtr = _lookup<
      ffi.NativeFunction<
          yolox_err_t Function(ffi.Pointer<YoloX>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<DetectResult>)>>('detectWithImagePath');
  late final _detectWithImagePath = _detectWithImagePathPtr.asFunction<
      int Function(ffi.Pointer<YoloX>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<DetectResult>)>();

  int detectWithPixels(
    ffi.Pointer<YoloX> yolox,
    ffi.Pointer<ffi.Uint8> pixels,
    int pixelType,
    int img_w,
    int img_h,
    ffi.Pointer<DetectResult> result,
  ) {
    return _detectWithPixels(
      yolox,
      pixels,
      pixelType,
      img_w,
      img_h,
      result,
    );
  }

  late final _detectWithPixelsPtr = _lookup<
      ffi.NativeFunction<
          yolox_err_t Function(
              ffi.Pointer<YoloX>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int32,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<DetectResult>)>>('detectWithPixels');
  late final _detectWithPixels = _detectWithPixelsPtr.asFunction<
      int Function(ffi.Pointer<YoloX>, ffi.Pointer<ffi.Uint8>, int, int, int,
          ffi.Pointer<DetectResult>)>();
}

final class YoloX extends ffi.Struct {
  /// path to model file
  external ffi.Pointer<ffi.Char> model_path;

  /// path to param file
  external ffi.Pointer<ffi.Char> param_path;

  /// nms threshold
  @ffi.Float()
  external double nms_thresh;

  /// threshold of bounding box prob
  @ffi.Float()
  external double conf_thresh;

  /// target image size after resize, might use 416 for small model
  @ffi.Float()
  external double target_size;
}

/// ncnn::Mat::PixelType
abstract class PixelType {
  static const int PIXEL_RGB = 1;
  static const int PIXEL_BGR = 2;
  static const int PIXEL_GRAY = 3;
  static const int PIXEL_RGBA = 4;
  static const int PIXEL_BGRA = 5;
}

final class Rect extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double w;

  @ffi.Float()
  external double h;
}

final class Object extends ffi.Struct {
  @ffi.Int()
  external int label;

  @ffi.Float()
  external double prob;

  external Rect rect;
}

final class DetectResult extends ffi.Struct {
  @ffi.Int()
  external int object_num;

  external ffi.Pointer<Object> object;
}

/// ncnn_yolox
typedef yolox_err_t = ffi.Int;

const int YOLOX_OK = 0;

const int YOLOX_ERROR = -1;
